--- a/PredictionLeague.Web/PredictionLeague.Web.Client/Components/Pages/Admin/Rounds/EnterResults.razor
+++ b/PredictionLeague.Web/PredictionLeague.Web.Client/Components/Pages/Admin/Rounds/EnterResults.razor
@@ -1,6 +1,6 @@
 ﻿@page "/admin/rounds/{RoundId:int}/submit-results"
 
-@attribute [Authorize(Roles = "Administrator")]
+@attribute [Authorize(Roles = RoleNames.Administrator)]
 
 @inject HttpClient Http
 @inject NavigationManager NavigationManager
