--- a/PredictionLeague.Web/PredictionLeague.Web.Client/Components/Pages/Dashboard.razor
+++ b/PredictionLeague.Web/PredictionLeague.Web.Client/Components/Pages/Dashboard.razor
@@ -43,8 +43,8 @@
                                             <NavLink href="@($"/predictions/{round.Id}")" class="btn green-button w-100">
                                                 Predict Now
                                             </NavLink>
-                                            
-                                            <AuthorizeView Roles="Administrator">
+
+                                            <AuthorizeView Roles="@RoleNames.Administrator">
                                                 <NavLink href="@($"/admin/rounds/{round.Id}/submit-results")" class="btn light-cyan-button w-100 mt-3">
                                                     Enter Results
                                                 </NavLink>
