--- a/PredictionLeague.Web/PredictionLeague.Web.Client/_Imports.razor
+++ b/PredictionLeague.Web/PredictionLeague.Web.Client/_Imports.razor
@@ -5,6 +5,7 @@
 @using Microsoft.AspNetCore.Components.Routing
 @using Microsoft.AspNetCore.Components.Web
 @using Microsoft.JSInterop
+@using PredictionLeague.Contracts
 @using PredictionLeague.Web.Client
 @using PredictionLeague.Web.Client.Authentication
 @using PredictionLeague.Web.Client.Components.Shared
