Fully Refactored API Project

--- a/PredictionLeague.Web/PredictionLeague.Web.Client/Components/Pages/Admin/Rounds/EnterResults.razor
+++ b/PredictionLeague.Web/PredictionLeague.Web.Client/Components/Pages/Admin/Rounds/EnterResults.razor
@@ -1,4 +1,4 @@
-﻿@page "/admin/rounds/{RoundId:int}/submit-results"
+﻿@page "/admin/rounds/{RoundId:int}/results"
 
 @attribute [Authorize(Roles = RoleNames.Administrator)]
 
