--- a/PredictionLeague.Web/PredictionLeague.Web.Client/Components/Pages/Dashboard.razor
+++ b/PredictionLeague.Web/PredictionLeague.Web.Client/Components/Pages/Dashboard.razor
@@ -44,7 +44,7 @@
                                             </NavLink>
 
                                             <AuthorizeView Roles="@RoleNames.Administrator">
-                                                <NavLink href="@($"/admin/rounds/{round.Id}/submit-results")" class="btn light-cyan-button w-100 mt-3">
+                                                <NavLink href="@($"/admin/rounds/{round.Id}/results")" class="btn light-cyan-button w-100 mt-3">
                                                     Enter Results
                                                 </NavLink>
                                             </AuthorizeView>
