League List Added Price

--- a/PredictionLeague.Web/PredictionLeague.Web.Client/Components/Pages/Admin/Team/Edit.razor
+++ b/PredictionLeague.Web/PredictionLeague.Web.Client/Components/Pages/Admin/Team/Edit.razor
@@ -55,7 +55,7 @@
             _model = new UpdateTeamRequest
             {
                 Name = team.Name,
-                LogoUrl = team.LogoUrl!
+                LogoUrl = team.LogoUrl
             };
         }
     }
