--- a/PredictionLeague.Web/PredictionLeague.Web.Client/wwwroot/css/app.css
+++ b/PredictionLeague.Web/PredictionLeague.Web.Client/wwwroot/css/app.css
@@ -5,6 +5,7 @@
 @import url('dashboard.css');
 @import url('forms.css');
 @import url('layout.css');
+@import url('leagues.css');
 @import url('loading.css');
 @import url('navbar.css');
 @import url('predictions.css');
