--- a/PredictionLeague.Web/PredictionLeague.Web.Client/wwwroot/css/layout.css
+++ b/PredictionLeague.Web/PredictionLeague.Web.Client/wwwroot/css/layout.css
@@ -11,7 +11,8 @@
     background-color: var(--pl-light-purple);
     padding: 2.5rem;
     border-radius: var(--bs-border-radius);
-    max-width: 900px;
+    width: 80%;
+    max-width: 1400px;
     margin: auto;
 }
 
