--- a/PredictionLeague.Web/PredictionLeague.Web.Client/wwwroot/css/leagues.css
+++ b/PredictionLeague.Web/PredictionLeague.Web.Client/wwwroot/css/leagues.css
@@ -56,6 +56,12 @@
         margin-bottom: 0;
     }
 
+        .league-card-row dd code {
+            font-size: 1.3rem;
+            font-weight: bold;
+            color: var(--pl-cyan);
+        }
+
 .league-card-footer {
     padding: 0 1.5rem 1.5rem 1.5rem;
     display: flex;
